--- a/blogs.html
+++ b/blogs.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.9/daisyui.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  
+
     <style>
         .dashed-line {
             border: none;
@@ -15,10 +20,15 @@
             width: 98%; 
             margin: 20px auto; /* Centering */
         }
+         /* google font */
+            .poppins-font {
+            font-family: "Poppins", sans-serif;
+            font-style: normal;
+        }
     </style>
 
 </head>
-<body class="bg-[#F4F7FF]">
+<body class="bg-[#F4F7FF] poppins-font">
     <section class="w-[1440px] min-h-screen mx-auto bg-[#F4F7FF]">
         <header class="pt-2">
             <!-- navbar -->
@@ -40,31 +50,50 @@
             <div class="bg-white p-4 rounded-md">
                 <h3 class="font-bold pl-3 pr-3 pt-3">Question-1: What are the different ways to select an element in the DOM?</h3>
                 <hr class="dashed-line">
-                <p class="pl-3 pr-3 pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque dicta placeat, eum reiciendis libero in soluta porro explicabo fuga voluptatum amet beatae quod numquam optio assumenda facere eos ad animi!</p>
+                <div class="pl-3 pr-3 pb-3">
+                    getElementById() id diye select kora jai. (Element) ata ar return type. <br> getElementsByClassName() class diye select kora jai. (HTMLCollection) ata ar return type. <br> getElementsByTagName() tag nam diye select kora jai. (HTMLCollection) ata ar return type. <br>  querySelector() css sector ar madthome select kora jai. (Element) ata ar return type. <br> querySelectorAll() eker othik element select kora jai. (NodeList) ata ar return type.
+                </div>
             </div>
             <!-- question two -->
             <div class="bg-white p-4 rounded-md">
                 <h3 class="font-bold pl-3 pr-3 pt-3">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h3>
                 <hr class="dashed-line">
-                <p class="pl-3 pr-3 pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque dicta placeat, eum reiciendis libero in soluta porro explicabo fuga voluptatum amet beatae quod numquam optio assumenda facere eos ad animi!</p>
+                <p class="pl-3 pr-3 pb-3"> innerHTML : <br>
+                    Ata HTML tag and text uvoikei poriborton korte pare. <br>
+                    innerText : <br>
+                    Ata shudhu text poriborton kore. <br>
+                    textContent : <br>
+                    Ata shudhu text poriborton kore and HTML tag k text hisebei dekhai.
+                    </p>
             </div>
             <!-- question three -->
             <div class="bg-white p-4 rounded-md">
                 <h3 class="font-bold pl-3 pr-3 pt-3">Question-3: What is event delegation in the DOM?</h3>
                 <hr class="dashed-line">
-                <p class="pl-3 pr-3 pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque dicta placeat, eum reiciendis libero in soluta porro explicabo fuga voluptatum amet beatae quod numquam optio assumenda facere eos ad animi!</p>
+                <p class="pl-3 pr-3 pb-3">Event prothome child element hisebe trigger kora hoi. Onk event Listener na diyei  performance valo rakha jai.  </p>
             </div>
             <!-- question four -->
             <div class="bg-white p-4 rounded-md">
                 <h3 class="font-bold pl-3 pr-3 pt-3">Question-4: What is event bubbling in the DOM?</h3>
                 <hr class="dashed-line">
-                <p class="pl-3 pr-3 pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque dicta placeat, eum reiciendis libero in soluta porro explicabo fuga voluptatum amet beatae quod numquam optio assumenda facere eos ad animi!</p>
+                <p class="pl-3 pr-3 pb-3">Event Bubbling holo jokhon ekti child element a event trigger hoi, tokhon sei event parent element porjonto upore uthe jai. Eti bottom-to-top (child theje parent) gromon kore.</p>
             </div>
             <!-- question five -->
             <div class="bg-white p-4 rounded-md">
                 <h3 class="font-bold pl-3 pr-3 pt-3">Question-5: How do you create, add, and remove elements using JavaScript??</h3>
                 <hr class="dashed-line">
-                <p class="pl-3 pr-3 pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque dicta placeat, eum reiciendis libero in soluta porro explicabo fuga voluptatum amet beatae quod numquam optio assumenda facere eos ad animi!</p>
+                <p class="pl-3 pr-3 pb-3">(createElement) <br>
+                    Let newDiv = document.createElement(“div”); 
+                    newDiv.innerText = “Hello, World!”;
+                    <br><br>
+                    (appendChild & prepend) <br>
+                    Document.body.appendChild(newDiv); 
+                    Document.body.prepend(newDiv);     
+                    <br><br>
+                    Element sorano (remove)
+                    <br>
+                    newDiv.remove();
+                    </p>
             </div>
           </section>
 
