--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.9/daisyui.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <!-- style -->
      <style>
+        /* google font */
+        .poppins-font {
+            font-family: "Poppins", sans-serif;
+            font-style: normal;
+        }
+
       /* .action-btn:active{
         background-color: red;
       } */
@@ -106,11 +115,11 @@
      </style>
 
 </head>
-<body class="bg-[#F4F7FF]">
-    <section class="w-[1440px] min-h-screen mx-auto bg-[#F4F7FF]">
+<body class="bg-[#F4F7FF] poppins-font">
+    <section class="w-[1440px] min-h-screen mx-auto">
         <header class="pt-2">
             <!-- navbar -->
-            <div class="navbar bg-base-100 shadow-sm rounded-2xl">
+            <div class="navbar bg-base-100 shadow-sm rounded-md">
                 <div class="flex-1 flex">
                     <img class="w-8" src="./assets/logo.png" alt="">
                     <a class="btn btn-ghost text-xl pb-1"><p>Dav<span class="font-bold">Board</span></p> </a>
@@ -126,14 +135,14 @@
                   </div>
                   <div>
                     <div class="relative bg-[#F4F7FF] w-12 h-12 rounded-full">
-                      <img class="absolute left-2 top-1 pt-1 w-8" src="./assets/theme-btn.png" alt="">
+                      <img id="changeBgButton" class="absolute left-2 top-1 pt-1 w-8" src="./assets/theme-btn.png" alt="">
                     </div>
                   </div>
                 </div>
               </div>
         </header>
         <section class="mt-3 flex">
-            <div class="bg-[#FFFFFF] min-h-screen p-3 mr-4 w-[7000px]">
+            <div class="bg-[#FFFFFF] min-h-screen p-3 mr-4 rounded-md">
                 <div class="flex justify-between gap-3">
                     <!-- Task Assigned -->
                     <div class="bg-[#F4F7FF] ml-3 w-xs flex justify-center text-center items-center gap-3 rounded-md">
@@ -291,7 +300,7 @@
             </div>
 
             <!-- pasher boro div ta -->
-             <section class="bg-white mr-3 w-[4900px]">
+             <section class="bg-white rounded-md">
               <div class="flex gap-5 pr-11 pl-11 pt-11 pb-2">
                 <img src="./assets/activity.png" alt="">
                 <h3>Activity Log</h3>
@@ -324,6 +333,8 @@
        <script src="./script/blogs.js"></script>
       <!-- notification -->
        <script src="./script/notification.js"></script>
+       <!-- colorChange -->
+        <script src="./script/colorChange.js"></script>
     
 </body>
 </html>
